tree-sitter/grammar.js
    source_file: ($) => repeat($._top_level),

    // ─── Comments ────────────────────────────────────────────────────────────

    block_comment: (_) =>
      token(seq("/*", repeat(choice(/[^*]/, seq("*", /[^/]/))), "*/")),

    // ─── Identifiers ─────────────────────────────────────────────────────────

    // Lowercase/underscore-start: variables, function names, labels, keywords
    identifier: (_) => /[a-z_][a-zA-Z0-9_]*/,

    // Uppercase-start: constructor names, type names, exception names, type vars
    uident: (_) => /[A-Z][a-zA-Z0-9_]*/,

    // ─── Top-level definitions ───────────────────────────────────────────────

    _top_level: ($) =>
      choice(
        $.type_def,
        $.exception_def,
        $.import_def,
        $.cap_def,
        $.external_def,
        $.exception_group_def,
        $.let_def,
        $.line_comment,
        $.block_comment
      ),

    // [pub] [opaque] type Name[<T>] = { field: type, ... }
    // [pub] [opaque] type Name[<T>] = A(label: T) | B
    type_def: ($) =>
      seq(
        optional("export"),
        optional("opaque"),
        "type",
        field("name", $.uident),
        optional(field("type_params", $.type_params)),
        "=",
        field("body", choice($.record_type, $.type_sum_def))
      ),

    // A(label: T) | B(U)
    type_sum_def: ($) => sep1("|", $.variant_def),

    variant_def: ($) =>
      seq(
        field("name", $.uident),
        optional(seq("(", commaSep1($.variant_field), ")"))
      ),

    // type | label: type
    variant_field: ($) =>
      choice(
        seq(field("label", $.identifier), ":", field("type", $._type)),
        field("type", $._type)
      ),

    // [pub] exception NotFound(msg: string)
    exception_def: ($) =>
      seq(
        optional("export"),
        "exception",
        field("name", $.uident),
        optional(seq("(", commaSep1($.variant_field), ")"))
      ),

    // [export] exception group Name = A | B | C
    import_def: ($) =>
      seq(
        "import",
        choice(
          seq("external", field("path", $.import_path)),
          seq(
            "{",
            field("items", commaSep1($.import_item)),
            "}",
            ",",
            "*",
            "as",
            field("alias", $.identifier),
            "from",
            field("path", $.import_path)
          ),
          seq(
            "{",
            field("items", commaSep1($.import_item)),
            "}",
            "from",
            field("path", $.import_path)
          ),
          seq(
            "*",
            "as",
            field("alias", $.identifier),
            "from",
            field("path", $.import_path)
          )
        )
      ),

    // Import item: name or Name, optionally renamed with `as`
    import_item: ($) =>
      seq(
        field("name", choice($.identifier, $.uident)),
        optional(seq("as", field("alias", $.identifier)))
      ),

    // Import path: quoted string (e.g. "nxlib/stdlib/filesystem.nx")
    import_path: ($) => $.string_literal,

    // [export] cap Name do fn sig ... end
    fn_signature: ($) =>
      seq(
        "fn",
        field("name", $.identifier),
        field("params", $.param_list),
        "->",
        field("ret_type", $._type),
        optional(seq("require", field("requires", $._effect_type))),
        optional(seq("throws", field("throws", $._effect_type)))
      ),

    // fn name[<T>](params) -> ret [require req] [throws eff] do body end
    handler_fn: ($) =>
      seq(
        "fn",
        field("name", $.identifier),
        optional(field("type_params", $.type_params)),
        field("params", $.param_list),
        "->",
        field("ret_type", $._type),
        optional(seq("require", field("requires", $._effect_type))),
        optional(seq("throws", field("throws", $._effect_type))),
        "do",
        field("body", repeat($._stmt)),
        "end"
      ),

    // [pub] let name [: type] = expr
    // [pub] let [sigil] name [: type] = expr
    let_def: ($) =>
      seq(
        optional("export"),
        "let",
        optional(field("sigil", $.sigil)),
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expr)
      ),

    // ─── Parameters ──────────────────────────────────────────────────────────

    type_params: ($) => seq("<", commaSep1($.uident), ">"),

    param_list: ($) => seq("(", commaSep($.param), ")"),

    param: ($) =>
      seq(
        optional(field("sigil", $.sigil)),
        field("name", $.identifier),
        ":",
        field("type", $._type)
      ),

    // ~ = mutable, % = linear, & = borrow, (none) = immutable
    sigil: (_) => choice("~", "%", "&", "@"),

    // ─── Types ───────────────────────────────────────────────────────────────

    _type: ($) =>
      choice(
        $.arrow_type,
        $.generic_type,
        $.primitive_type,
        $.ref_type,
        $.borrow_type,
        $.linear_type,
        $.record_type,
        $.list_type,
        $.array_type,
        $.row_type,
        $.lazy_type,
        alias($.uident, $.type_identifier) // type variable or user-defined monotype
      ),

    primitive_type: (_) =>
      choice("i32", "i64", "f32", "f64", "float", "bool", "string", "char", "unit"),

    // ref(T)
    borrow_type: ($) => seq("&", field("inner", $._type)),

    // %T
    linear_type: ($) => seq("%", field("inner", $._type)),

    // @T
    record_type: ($) => seq("{", commaSep1($.record_type_field), "}"),

    record_type_field: ($) =>
      seq(field("name", $.identifier), ":", field("type", $._type)),

    // { E1, E2 | r }  or  { E1, E2 }
    row_type: ($) =>
      seq(
        "{",
        commaSep1($._type),
        optional(seq("|", field("tail", $._type))),
        "}"
      ),

    // [T]
    list_type: ($) => seq("[", field("element", $._type), "]"),

    // [| T |]
    array_type: ($) =>
      seq(
        alias(token("[|"), "[|"),
        field("element", $._type),
        alias(token("|]"), "|]")
      ),

    // Name<T, U>  or  Result<T, E>
    arrow_type: ($) =>
      prec.right(
        seq(
          "(",
          commaSep(
            choice(
              seq(
                field("param_label", $.identifier),
                ":",
                field("param_type", $._type)
              ),
              field("param_type", $._type)
            )
          ),
          ")",
          "->",
          field("ret", $._type),
          optional(seq("require", field("require", $._effect_type))),
          optional(seq("throws", field("throws", $._effect_type)))
        )
      ),

    _effect_type: ($) =>
      choice(
        $.row_type,
        $.generic_type,
        alias($.uident, $.type_identifier)
      ),

    // ─── Statements ──────────────────────────────────────────────────────────

    _stmt: ($) =>
      choice(
        $.let_stmt,
        $.return_stmt,
        $.assign_stmt,
        $.let_pattern_stmt,
        $.if_stmt,
        $.if_let_stmt,
        $.match_stmt,
        $.while_stmt,
        $.for_stmt,
        $.try_stmt,
        $.inject_stmt,
        $.line_comment,
        $.block_comment,
        $.expr_stmt
      ),

    // let [sigil] name [: type] = expr
    let_stmt: ($) =>
      prec(1, seq(
        "let",
        optional(field("sigil", $.sigil)),
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expr)
      )),

    return_stmt: ($) => seq("return", field("value", $._expr)),

    // target <- value
    assign_stmt: ($) =>
      seq(field("target", $._expr), "<-", field("value", $._expr)),

    // if cond then stmts [else stmts | else if...] end
    // `else if` is a chain: the inner `if` consumes the trailing `end`, so the
    // outer form has a single terminal `end` (no nested `end end`).
    if_stmt: ($) =>
      seq(
        "if",
        field("cond", $._expr),
        "then",
        field("then_branch", repeat($._stmt)),
        choice(
          seq("else", field("else_branch", $.if_stmt)),
          seq("else", field("else_branch", repeat($._stmt)), "end"),
          "end"
        )
      ),

    // if let pattern = expr then stmts [else stmts | else if...] end
    match_stmt: ($) =>
      seq(
        "match",
        field("target", $._expr),
        "do",
        repeat($.match_case),
        "end"
      ),

    match_case: ($) =>
      seq(
        "|",
        field("pattern", $._pattern_or),
        "->",
        field("body", repeat($._stmt))
      ),

    // while cond do stmts end
    while_stmt: ($) =>
      seq(
        "while",
        field("cond", $._expr),
        "do",
        field("body", repeat($._stmt)),
        "end"
      ),

    // for var = start to end do stmts end
    for_stmt: ($) =>
      seq(
        "for",
        field("var", $.identifier),
        "=",
        field("start", $._expr),
        "to",
        field("end", $._expr),
        "do",
        field("body", repeat($._stmt)),
        "end"
      ),

    // try stmts catch param -> stmts end
    // try stmts catch | pat -> stmts ... end
    try_stmt: ($) =>
      seq(
        "try",
        field("body", repeat($._stmt)),
        "catch",
        choice(
          // Bare: catch param -> body
          seq(
            field("catch_param", $.identifier),
            "->",
            field("catch_body", repeat($._stmt))
          ),
          // Multi-arm: catch | pat -> body ... end
          field("catch_arms", repeat1($.catch_arm))
        ),
        "end"
      ),

    inject_stmt: ($) =>
      seq(
        "inject",
        sep1(",", field("handler", $.inject_handler)),
        "do",
        field("body", repeat($._stmt)),
        "end"
      ),

    // handler name in inject: plain `name` or dotted `mod.name`
    inject_handler: ($) =>
      seq(
        $.identifier,
        optional(seq(".", $.identifier))
      ),

    // let pattern = expr  (destructuring)
    let_pattern_stmt: ($) =>
      seq(
        "let",
        field("pattern", $._pattern),
        "=",
        field("value", $._expr)
      ),

    expr_stmt: ($) => $._expr,

    // ─── Expressions ─────────────────────────────────────────────────────────

    _expr: ($) => choice($.binary_expr, $._postfix_expr),

    // Binary operators with precedence levels (low → high)
    // 1: ||  2: &&  3: comparison  4: additive  5: multiplicative
    binary_expr: ($) =>
      choice(
        // Logical OR (lowest precedence)
        prec.left(
          1,
          seq(
            field("left", $._expr),
            field("operator", "||"),
            field("right", $._expr)
          )
        ),
        // Logical AND
        prec.left(
          2,
          seq(
            field("left", $._expr),
            field("operator", "&&"),
            field("right", $._expr)
          )
        ),
        // Float comparisons (must come before int comparisons to avoid partial matches)
        prec.left(
          3,
          seq(
            field("left", $._expr),
            field("operator", choice("==.", "!=.", "<=.", ">=.", "<.", ">.")),
            field("right", $._expr)
          )
        ),
        // Int/generic comparisons
        prec.left(
          3,
          seq(
            field("left", $._expr),
            field("operator", choice("==", "!=", "<=", ">=", "<", ">")),
            field("right", $._expr)
          )
        ),
        // :: cons (right-associative, same precedence as additive)
        prec.right(
          4,
          seq(
            field("left", $._expr),
            field("operator", "::"),
            field("right", $._expr)
          )
        ),
        // Float additive
        prec.left(
          4,
          seq(
            field("left", $._expr),
            field("operator", choice("+.", "-.")),
            field("right", $._expr)
          )
        ),
        // Int/string additive (++ = string concat)
        prec.left(
          4,
          seq(
            field("left", $._expr),
            field("operator", choice("++", "+", "-")),
            field("right", $._expr)
          )
        ),
        // Float multiplicative
        prec.left(
          5,
          seq(
            field("left", $._expr),
            field("operator", choice("*.", "/.")),
            field("right", $._expr)
          )
        ),
        // Int multiplicative + modulo
        prec.left(
          5,
          seq(
            field("left", $._expr),
            field("operator", choice("*", "/", "%")),
            field("right", $._expr)
          )
        ),
        // Bitwise XOR (same precedence as additive)
        prec.left(
          4,
          seq(
            field("left", $._expr),
            field("operator", "^"),
            field("right", $._expr)
          )
        ),
        // Bitwise AND (same precedence as multiplicative)
        prec.left(
          5,
          seq(
            field("left", $._expr),
            field("operator", "&"),
            field("right", $._expr)
          )
        ),
        // Bit shift (highest precedence)
        prec.left(
          6,
          seq(
            field("left", $._expr),
            field("operator", choice("<<", ">>")),
            field("right", $._expr)
          )
        )
      ),

    match_expr: ($) =>
      seq(
        "match",
        field("target", $._expr),
        "do",
        repeat($.match_case_expr),
        "end"
      ),

    match_case_expr: ($) =>
      seq(
        "|",
        field("pattern", $._pattern_or),
        "->",
        field("value", $._expr)
      ),

    raise_expr: ($) => seq("raise", field("value", $._expr)),

    // & [sigil] name
    borrow_expr: ($) =>
      seq(
        "&",
        optional(field("sigil", $.sigil)),
        field("name", $.identifier)
      ),

    // fn [<T>](params) -> ret [require req] [throws eff] do body end
    lambda_expr: ($) =>
      prec.right(
        seq(
          "fn",
          optional(field("type_params", $.type_params)),
          field("params", $.param_list),
          "->",
          field("ret_type", $._type),
          optional(seq("require", field("requires", $._effect_type))),
          optional(seq("throws", field("throws", $._effect_type))),
          "do",
          field("body", repeat($._stmt)),
          "end"
        )
      ),

    // [pub] external name = [=[wasm_symbol]=] : [<T>] arrow_type
    external_def: ($) =>
      seq(
        optional("export"),
        "external",
        field("name", $.identifier),
        "=",
        field("wasm_name", $.string_literal),
        ":",
        optional(field("type_params", $.type_params)),
        field("type", $.arrow_type)
      ),

    // handler PortName [require { ... }] do handler_fn* end
    handler_expr: ($) =>
      seq(
        "handler",
        field("cap_name", $.uident),
        optional(seq("require", field("requires", $._effect_type))),
        "do",
        repeat($.handler_fn),
        "end"
      ),

    // path(label: value, ...)
    call_expr: ($) =>
      seq(
        field("func", $.dotted_identifier),
        "(",
        field("args", commaSep($.labeled_arg)),
        ")"
      ),

    // label: value
    labeled_arg: ($) =>
      seq(
        field("label", $.identifier),
        ":",
        field("value", $._expr)
      ),

    // Constructor(label: value, ...)  — optional labels, UIDENT name
    constructor_expr: ($) =>
      seq(
        field("name", $.uident),
        "(",
        field("args", commaSep($.ctor_arg)),
        ")"
      ),

    // [ label ":" ] expr
    ctor_arg: ($) =>
      choice(
        seq(field("label", $.identifier), ":", field("value", $._expr)),
        field("value", $._expr)
      ),

    // { field: value, ... }
    list_expr: ($) =>
      seq("[", field("elements", commaSep($._expr)), optional(","), "]"),

    // %[e1, e2, ...]  — linear list literal
